--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -19,13 +19,50 @@
   --button-text-color: var(--palette-pure-white);
   --overlay-color: var(--palette-overlay-black);
   --global-shadow: rgba(33, 33, 33, 0.4) -3.5rem 0 1rem -3rem inset,
-  rgba(33, 33, 33, 0.2) 3rem 0 .5rem -3rem inset,
-  rgba(33, 33, 33, 0.1) 0 -1rem .25rem -1.1rem inset,
-  rgba(255, 255, 255, 0.5) 0 1rem .25rem -1.1rem inset;
+    rgba(33, 33, 33, 0.2) 3rem 0 0.5rem -3rem inset,
+    rgba(33, 33, 33, 0.1) 0 -1rem 0.25rem -1.1rem inset,
+    rgba(255, 255, 255, 0.5) 0 1rem 0.25rem -1.1rem inset;
+
+  font-family: var(--font-dm-sans);
+}
+
+input {
+  position: relative;
+  top: 10%;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-family: var(--font-sofia-sans);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+  color: var(--plate-text-color);
+}
+
+button {
+  cursor: pointer;
+  display: flex;
+  font-size: 1.5rem;
+  border: 0;
+  border-radius: 0.25rem;
+  align-items: center;
+  justify-content: center;
+  color: var(--button-text-color);
+  font-family: var(--font-dm-sans);
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: var(--font-dm-sans);
+  color: var(--text-color);
 }
 
 span.siftarm {
-  display:flex;
+  display: flex;
   height: 3rem;
   position: relative;
   width: fit-content;
@@ -34,11 +71,11 @@ span.siftarm {
     position: relative;
     display: inline;
     color: var(--palette-black);
-    margin: .5rem;;
+    margin: 0.5rem;
     font-size: 2rem;
     line-height: 2rem;
     font-family: var(--font-lexend);
-    font-weight:normal;
+    font-weight: normal;
   }
 
   span {
@@ -50,15 +87,14 @@ span.siftarm {
     max-width: 33rem;
     width: calc((round(up, 100% - 3rem, 6rem) + 3rem));
     box-shadow: var(--global-shadow);
-    border-radius: calc(1rem/16);
+    border-radius: calc(1rem / 16);
     background-color: var(--palette-yellow);
   }
-
 }
 
 #root > span {
   display: block;
-  position:fixed;
+  position: fixed;
   z-index: -1;
   height: 3.5rem;
   width: 100%;
@@ -77,14 +113,10 @@ header {
     font-size: 2rem;
     line-height: 2rem;
     font-family: var(--font-lexend);
-    font-weight:normal;
-    margin:0
+    font-weight: normal;
+    margin: 0;
   }
 }
-
-
-
-
 
 nav {
   position: sticky;
@@ -98,7 +130,9 @@ main {
   column-gap: 1rem;
 }
 
-section {
+section section section {
+  border: 1px solid black;
+  margin: 1rem;
   flex: 1 1 0;
   flex-flow: column nowrap;
 
